{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 36,
  "lineage": "461c4cbf-ce6a-bf8b-37de-a1542f7c24ef",
  "resources": [
    {
      "module": "module.Vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "dns_servers": [
              "10.2.1.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "76f990f5-eb24-4a58-bd74-7f9605c144d2",
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/virtualNetworks/AD-Vnet",
            "location": "eastus",
            "name": "AD-Vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "AD",
            "subnet": [
              {
                "address_prefixes": [
                  "10.2.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/virtualNetworks/AD-Vnet/subnets/vms",
                "name": "vms",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": false
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AD-Vnet",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-0",
            "ip_configuration": [
              {
                "name": "ip-0",
                "primary": true,
                "private_ip_address": "10.2.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/virtualNetworks/AD-Vnet/subnets/vms"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-26-76-54",
            "name": "AD-0",
            "private_ip_address": "10.2.1.6",
            "private_ip_addresses": [
              "10.2.1.6"
            ],
            "resource_group_name": "AD",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Compute/virtualMachines/redhat-AD"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AD-0",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[0]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-0|/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-0",
            "network_interface_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-0",
            "network_security_group_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.nic-AD.azurerm_network_interface.nic",
            "module.nsg-AD.azurerm_network_security_group.name",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-1",
            "internal_domain_name_suffix": "4wips3re3nmevplup4lalqke0c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip-1",
                "primary": true,
                "private_ip_address": "10.2.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/publicIPAddresses/ip2",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/virtualNetworks/AD-Vnet/subnets/vms"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-1D-AE-38",
            "name": "AD-1",
            "private_ip_address": "10.2.1.5",
            "private_ip_addresses": [
              "10.2.1.5"
            ],
            "resource_group_name": "AD",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Compute/virtualMachines/AD-Windows-0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AD-1",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[1]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-1|/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "network_interface_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-1",
            "network_security_group_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.nic-AD.azurerm_network_interface.nic",
            "module.nsg-AD.azurerm_network_security_group.name",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[2]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-2",
            "ip_configuration": [
              {
                "name": "ip-2",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/virtualNetworks/AD-Vnet/subnets/vms"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-17-AB-87",
            "name": "AD-2",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "AD",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Compute/virtualMachines/AD-Windows-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AD-2",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[2]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-2|/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-2",
            "network_interface_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-2",
            "network_security_group_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.nic-AD.azurerm_network_interface.nic",
            "module.nsg-AD.azurerm_network_security_group.name",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[3]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-3",
            "internal_domain_name_suffix": "4wips3re3nmevplup4lalqke0c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip-3",
                "primary": true,
                "private_ip_address": "10.2.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/virtualNetworks/AD-Vnet/subnets/vms"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "AD-3",
            "private_ip_address": "10.2.1.7",
            "private_ip_addresses": [
              "10.2.1.7"
            ],
            "resource_group_name": "AD"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AD-3",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-AD[3]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-3|/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-3",
            "network_interface_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkInterfaces/AD-3",
            "network_security_group_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet",
            "module.nic-AD.azurerm_network_interface.nic",
            "module.nsg-AD.azurerm_network_security_group.name",
            "module.pubips.azurerm_public_ip.name",
            "module.subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-AD[0]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-0",
            "location": "eastus",
            "name": "nsg-0",
            "resource_group_name": "AD",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-RDP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-0",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-AD[1]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "location": "eastus",
            "name": "nsg-1",
            "resource_group_name": "AD",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-RDP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-1",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-AD[2]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-2",
            "location": "eastus",
            "name": "nsg-2",
            "resource_group_name": "AD",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-RDP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-2",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-AD[3]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/networkSecurityGroups/nsg-3",
            "location": "eastus",
            "name": "nsg-3",
            "resource_group_name": "AD",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-RDP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-3",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.pubips",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/publicIPAddresses/ip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.106.153",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ip2",
            "resource_group_name": "AD",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/AD/providers/Microsoft.Network/virtualNetworks/AD-Vnet/subnets/vms",
            "name": "vms",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "AD",
            "virtual_network_name": "AD-Vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vms",
            "resource_group_name": "AD",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256",
            "virtual_network_name": "AD-Vnet"
          },
          "dependencies": [
            "module.AD-RG.azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}